Added Header to Component List in Recipes

--- a/templates/recipeDetails.html
+++ b/templates/recipeDetails.html
@@ -61,6 +61,7 @@
         <br>
         <hr>
         <br>
+        <h4>Here is the list of Components assigned to this recipe:</h4>
         <table class="table table-bordered">
             <tr>
                 <th class="warning">Component</th>
